[project]
name = "comfyui-molmo"
description = "Use of the molmo model.Generate detailed image descriptions and analysis using Molmo models in ComfyUI."
version = "1.0.6"
license = {file = "LICENSE"}
dependencies = ["torch", "transformers", "Pillow", "einops", "torchvision", "huggingface_hub", "bitsandbytes", "accelerate", "numpy", "tensorflow"]

[project.urls]
Repository = "https://github.com/CY-CHENYUE/ComfyUI-Molmo"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "cychenyue"
DisplayName = "ComfyUI-Molmo"
Icon = ""
